--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;700&display=swap');
 @tailwind components;
 @tailwind utilities;
+
+body {
+    margin: 0;
+}
